<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_name_msg">Enter Name</string>
    <string name="enter_email_msg">Enter Email ID</string>
    <string name="enter_valid_email_msg">Enter Valid Email ID</string>
    <string name="enter_mobile_msg">Enter Mobile Number</string>
    <string name="enter_valid_mobile_msg">Enter Valid 10 Digit Mobile Number</string>
    <string name="enter_pwd_msg">Enter Password</string>
    <string name="pwd_valid_msg">Both Passwords Not Matched</string>
    <string name="no_internet_msg">No Internet Connection</string>
</resources>
